# pdbreader

./: .gitignore  README.md  setup.cfg  setup.py
pdbreader/: __init__.py  atom_data.py  bonds.py  parser.py  pdbreader.py  specification.py  vdw.py
