[metadata]
name = pdbreader
url = https://github.com/brisvag/pdbreader
license = 
license_file = LICENSE
description = Simple reader for pdb (Protein Data Bank) files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
include_package_data = True
install_requires =
    pandas

[options.extras_require]
dev =
    pytest
    pytest-qt


[options.package_data]
* = *.txt, *.md


[flake8]
# E116, E117: unexpected indentations in comment (happens when commenting out code)
ignore = E116,E117
exclude = __init__.py,docs,examples
max-line-length = 120
