[metadata]
name = pdbreader
url = https://github.com/brisvag/pdbreader
license = GPL3
license_file = LICENSE
description = Simple reader for pdb (Protein Data Bank) files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
include_package_data = True
install_requires =
    pandas

[options.package_data]
* = *.txt, *.md
